--- a/initfiles/init.mocha.rc
+++ b/initfiles/init.mocha.rc
@@ -1,51 +1,97 @@
-#Copyright (c) 2011-2014 NVIDIA Corporation.  All Rights Reserved.
+#Copyright (c) 2011-2013 NVIDIA Corporation.  All Rights Reserved.
 #
 #NVIDIA Corporation and its licensors retain all intellectual property and
 #proprietary rights in and to this software and related documentation.  Any
 #use, reproduction, disclosure or distribution of this software and related
 #documentation without an express license agreement from NVIDIA Corporation
 #is strictly prohibited.
-
-import init.tegra.rc
-import init.tn8_common.rc
-import init.t124.rc
-import init.cal.rc
-import init.ray_touch.rc
+import init.t124_emmc.rc
 
 on fs
-    setprop ro.gpsstatus.changed true
+    setprop ro.crypto.tmpfs_options size=128m,mode=0771,uid=1000,gid=1000
+    setprop ro.crypto.umount_sd false
+    setprop ro.crypto.fuse_sdcard true
+    mount_all /fstab.mocha
+
+    wait /dev/block/platform/sdhci-tegra.3/by-name/cache
+    exec /system/bin/sh /system/bin/mount_ext4.sh /dev/block/platform/sdhci-tegra.3/by-name/cache /cache
+
+    wait /dev/block/platform/sdhci-tegra.3/by-name/persist
+    exec /system/bin/sh /system/bin/mount_ext4.sh /dev/block/platform/sdhci-tegra.3/by-name/persist /persist
+    chown system system /persist
+    chmod 0771 /persist
+    mkdir /persist/property 0700 root root
+
+    # mount console ramooops
+    mount pstore pstore /sys/fs/pstore
+
+    chown system system /persist/serialno
+    chmod 0400 /persist/serialno
 
 on post-fs-data
-    mount ext4 /dev/block/platform/sdhci-tegra.3/by-name/FCT /mnt/factory ro context=u:object_r:factory_file:s0
+    chown system system /dev/sysmatdrv
+    chmod 0660 /dev/sysmatdrv
+    insmod /system/lib/modules/texfat.ko
 
-    write /sys/class/gpio/export 61
-    write /sys/class/gpio/gpio61/direction out
-    write /sys/class/gpio/gpio61/value 0
-    chown root system /sys/class/gpio/gpio61/value
-    chmod 0664 /sys/class/gpio/gpio61/value
-    chmod 0644 /sys/kernel/cluster/active
-    start start-gps
+on boot
+    #max resolution supported for Miracast is 1080p, represented interms of macroblocks
+    setprop nvwfd.maxresolution_macroblocks 8160
+    #enable Miracast game mode support
+    setprop nvwfd.gamemode 1
+    setprop wifi.supplicant wpa_suppl_nl
+
+    # Remove gps feature from mocha
+    # Start GPS daemon
+    # service gps-daemon /system/bin/gpsd -c /system/etc/gps/gpsconfig.xml
+    # user gps
+    # socket gps seqpacket 0660 gps system
+    # group system inet sdcard_rw sdcard_r
+    # class main
+    # disabled
 
 on init
-    setprop sys.esrd.powermon_path /sys/bus/i2c/devices/1-0040/iio_device
-    setprop sys.esrd.powermon_channel 0
-    setprop sys.esrd.min_esr 95
-    setprop sys.esrd.max_esr 160
-    setprop sys.esrd.margin 42
-    setprop sys.esrd.nwindow 200
-    setprop sys.esrd.ntry 600
-    setprop sys.esrd.tsample 20
-    setprop sys.esrd.delay_start 900
-    setprop sys.esrd.delay_retry 900
-    setprop sys.esrd.delay_ok 604800
-    setprop sys.esrd.needed_coeff 0.97
-    setprop sys.esrd.needed_var 300
-    setprop sys.esrd.battery_thresh_high 60
-    setprop sys.esrd.battery_thresh_low 15
-    setprop sys.esrd.load_burst_duration 3
-    setprop sys.esrd.check_screen_off 1
-    chown system system /sys/power/sysedp/batmon/esr
-    chown system system /sys/bus/i2c/devices/1-0040/iio_device/running_mode
+    # Mount a tmpfs into /mnt/tmp for hosting nvram, phs shared memory
+    mkdir /mnt/tmp 0770 system system
+    mount tmpfs tmpfs /mnt/tmp mode=0775,gid=1003
+    # Immersion
+    export VIBE_PIPE_PATH /dev/pipes
+    mkdir /dev/pipes 0771 system system
 
-on property:sys.boot_completed=1
-    write /sys/class/tty/ttyS0/console_write_enable 0
+service sysmatsir /system/bin/smonsir
+    user root
+    group root
+    oneshot
+    disabled
+
+service sysmatpro /system/bin/smprosrv
+    user root
+    group root
+    oneshot
+    disabled
+
+service charger /sbin/chargeonlymode
+    class charger
+
+service nv_power /system/bin/power_mode.sh
+    user system
+    group system
+    oneshot
+    disabled
+
+on property:persist.sys.aries.power_profile=high
+    start nv_power
+
+on property:persist.sys.aries.power_profile=middle
+    start nv_power
+
+on property:persist.sys.aries.power_profile=low
+    start nv_power
+
+on property:persist.sys.matsir.enable=1
+    setprop sys.sysmat.service.control start
+    start sysmatsir
+    start sysmatpro
+
+on property:persist.debug.trace=1
+    mkdir /data/core 0777 root root
+    write /proc/sys/kernel/core_pattern "/data/core/%E.%p.%e"
